Update with latest JDK changes
And try to add support for aarch64 build hosts